--- a/website/package.json
+++ b/website/package.json
@@ -12,7 +12,9 @@
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
     "react": "^17.0.2",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
+    "react-hamburger-menu": "^1.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.3",
@@ -43,6 +45,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-burger-menu": "^2.8.1",
+    "@types/react-hamburger-menu": "0.0.4",
     "@types/react-router-dom": "^5.3.1",
     "autoprefixer": "^9.8.8",
     "postcss": "^7.0.39",
